[gd_scene load_steps=10 format=3 uid="uid://c2hx651fm136q"]

[ext_resource type="Texture2D" uid="uid://boga1wldvv17d" path="res://Art/Sprout Lands - Sprites - Basic pack/Tilesets/Wooden House.png" id="1_wjp4u"]
[ext_resource type="Script" path="res://Objects/door.gd" id="2_xf31d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_14emi"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_cp8u7"]
resource_name = "Closed"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}

[sub_resource type="Animation" id="Animation_pt2en"]
resource_name = "Opened"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [17]
}

[sub_resource type="Animation" id="Animation_l4epq"]
resource_name = "Closing"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [17, 24, 10]
}

[sub_resource type="Animation" id="Animation_midoe"]
resource_name = "Opening"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [10, 24, 17]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_urwwn"]
_data = {
"Closed": SubResource("Animation_cp8u7"),
"Closing": SubResource("Animation_l4epq"),
"Opened": SubResource("Animation_pt2en"),
"Opening": SubResource("Animation_midoe")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_616ga"]
size = Vector2(12, 27)

[node name="Door" type="Sprite2D"]
texture = ExtResource("1_wjp4u")
hframes = 7
vframes = 5
frame = 24
script = ExtResource("2_xf31d")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_14emi")

[node name="AnimationPlayer" type="AnimationPlayer" parent="StaticBody2D"]
libraries = {
"": SubResource("AnimationLibrary_urwwn")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_616ga")
debug_color = Color(0.411765, 0.6, 0.25098, 0.419608)

[node name="Info_press" type="Label" parent="."]
z_index = 1
offset_left = -13.0
offset_top = -20.0
offset_right = 13.0
offset_bottom = -8.0
theme_override_font_sizes/font_size = 8
text = "Press E"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
